--- a/edu0704/css/normal.css
+++ b/edu0704/css/normal.css
@@ -23,3 +23,27 @@ a {
 li {
   list-style: none;
 }
+
+button {
+  outline:none;
+}
+
+.mask {
+  position: absolute;
+  display: none;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+input {
+  background:none;  
+	outline:none;  
+	border:0px;
+}
+
+.clear {
+  clear: both;
+}
