--- a/edu0704/css/path.css
+++ b/edu0704/css/path.css
@@ -12,11 +12,6 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body {
-  background: url('../img/pathBg.png') no-repeat;
-  background-size: 100% 100%; 
-}
-
 li {
   list-style: none;
 }
@@ -48,7 +43,6 @@ button {
 
 .BtnWrap {
   position: absolute;
-  right: 20px;
 }
 
 .BtnWrap ul {
@@ -63,7 +57,7 @@ button {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin: 0 2px;  
+  margin: 0 2px;
 }
 
 .btngroup {
@@ -71,6 +65,8 @@ button {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #add {
