--- a/edu0704/css/edu.css
+++ b/edu0704/css/edu.css
@@ -126,9 +126,9 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 300px;
+  width: 350px;
   height: 100%;
-  padding: 10px;
+  padding: 10px 25px;
   box-sizing: border-box;
   background: #fff;
   z-index: 100;
@@ -173,6 +173,7 @@
 .sidebarContent {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 #blockly {
@@ -453,7 +454,308 @@
   text-align: center;
 }
 
+.example {
+  width: 1200px;
+}
 
+.example .exampleWrap {
+  display: flex;
+  width: 100%;
+  padding: 20px 40px;
+  height: 450px;
+  box-sizing: border-box;
+  overflow: auto;
+}
+
+.example .current {
+  position: relative;
+  flex: 1;
+  border-radius: 10px;
+  margin-left: 20px; 
+  box-sizing: border-box;
+  box-shadow: 0px 0px 10px 3px #d8d8d8;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.example .current:hover::after {
+  content: '点击观看示例';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 410px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.current .curImg {
+  display: inline-block;
+  width: 100%;
+  height: 140px;
+  overflow: hidden;
+}
+
+.current .curImg img {
+  width: 100%;
+  height: auto;
+}
+
+.current .curInfo {
+  width: 90%;
+  margin: 20px 0px 0 30px;
+}
+
+.current .curInfo .curtitle {
+  font-size: 25px;
+  color: rgb(0, 151, 167);
+  margin-bottom: 10px;
+  letter-spacing: 2px;
+}
+
+.current .curInfo .know {
+  display: block;
+  font-size: 17px;
+  margin-bottom: 10px;
+}
+
+.current .curInfo .konwPoint, .difftil {
+  display: inline-block;
+  font-weight: 700;
+  margin-right: 25px;
+  color: rgb(0, 151, 167);
+}
+
+.current .curInfo .curkonw, .current .curInfo i {
+  font-weight: 700;
+  color: rgb(255, 166, 0);
+  margin: 0 3px;
+}
+
+.current .curInfo .curStory {
+  width: 90%;
+  height: auto;
+  max-height: 100px;
+  margin: 15px 0;
+  color: rgb(255, 166, 0);
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 500;
+  text-align: justify;
+  overflow: auto;
+}
+
+.current .curInfo .curStory::-webkit-scrollbar {
+  display: none;
+}
+
+.example .exampleList {
+  flex: 2;
+  margin-left: 40px;
+  padding: 0 20px;
+  box-sizing: border-box;
+  overflow: auto;
+}
+
+.example .exampleList::-webkit-scrollbar {
+  display: none;
+}
+
+.example .exampleList .listWrap {
+  width: 100%;
+  height: auto;
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: center;
+}
+
+.listWrap .list {
+  position: relative;
+  width: 170px;
+  height: 220px;
+  margin: 18px;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 3px #d8d8d8;
+}
+
+.listWrap .list:hover {
+  transform: scale(1.1);
+}
+
+.listWrap .liImgWrap {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+.listWrap .liImgWrap img {
+  width: 100%;
+  height: auto;
+}
+
+.listWrap .liname {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  font-size: 13px;
+  line-height: 50px;
+  text-align: center;
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  white-space: nowrap; 
+}
+
+.robotWrap {
+  width: 100%;
+  height: auto;
+}
+
+.robotWrap .curRoCard {
+  width: 100%;
+  height: 160px;
+  border-radius: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+  background: url(../img/currobotBg.png) no-repeat;
+  background-size: 100% auto; 
+}
+
+.robotWrap .curRoWrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.curRoImg {
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  line-height: 160px;
+  width: 100px;
+  height: auto;
+}
+
+.robotWrap .curRoInfoWrap {
+  position: absolute;
+  right: 0;
+  width: 60%;
+  height: 100%;
+  font-size: 12px;
+  padding: 15px 0 0 10px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.robotWrap .curRoTi {
+  display: inline-block;
+  font-size: 20px;
+  padding-bottom: 5px;
+  color: rgb(0, 151, 167);
+  border-bottom: 2px solid rgb(0, 151, 167);
+}
+
+.robotWrap .curRoIfWrap {
+  margin-top: 5px;
+}
+
+.robotWrap .curRoIfList {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: flex-start;
+  margin-bottom: 5px;
+}
+
+.robotWrap .info {
+  margin-right: 7px;
+}
+
+.robotWrap .listWrap {
+  display: flex;
+  display: -webkit-flex;
+  margin-top: 20px;
+  flex-wrap: wrap;
+  align-content: space-around;
+  justify-content: space-between;
+  text-justify: center;
+}
+
+.robotWrap .robotlist {
+  position: relative;
+  display: inline-block;
+  width: 90px;
+  height: 110px;
+  margin-top: 20px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background: #eaeaea;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.robotWrap .robotlist .imgWrap {
+  position: absolute;
+  width: 90px;
+  height: auto;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
+
+.robotWrap .listName {
+  display: inline-block;
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+  height: auto;
+  font-size: 13px;
+  text-align: center;
+}
+
+.robotWrap .robotlist:hover::after {
+  content: '点我';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  font-size: 13px;
+  line-height: 85px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.robotWrap .robotlist .imgWrap img {
+  width: 100%;
+  height: auto;
+  transform: scale(0.8);
+}
+
+.robotWrap .addMac {
+  display: inline-block;
+  width: 90px;
+  height: 115px;
+  margin-top: 20px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background: #eaeaea;
+  cursor: pointer;
+  font-size: 40px;
+  color: rgb(129, 129, 129);
+  text-align: center;
+  line-height: 115px;
+}
 
 
 
