--- a/edu0704/css/edu.css
+++ b/edu0704/css/edu.css
@@ -258,6 +258,15 @@
   box-sizing: border-box;
 }
 
+.login .errInfo {
+  display: inline-block;
+  width: 100%;
+  height: 20px;
+  text-align: center;
+  font-size: 12px;
+  color: red;
+}
+
 .login input {
   display: inline-block;
   width: 260px;
@@ -274,12 +283,19 @@
 .login .loginBtn {
   width: 320px;
   height: 40px;
-  margin: 25px auto 0;
-  font-size: 19px;
+  margin: 15px auto 0;
   text-align: center;
   line-height: 40px;
-  background: rgb(255, 222, 0);
   border-radius: 8px;
+  overflow: hidden;
+}
+
+.login button {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  font-size: 19px;
+  background: rgb(255, 222, 0);
   cursor: pointer;
 }
 
@@ -702,6 +718,10 @@
   cursor: pointer;
 }
 
+.robotWrap .robotlist:nth-child(1) {
+  background: #ababab
+}
+
 .robotWrap .robotlist .imgWrap {
   position: absolute;
   width: 90px;
@@ -758,6 +778,46 @@
 }
 
 
+.login .addmacWrap {
+  width: 100%;
+  height: 100px;
+  padding: 0 60px;
+  box-sizing: border-box;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.addmacWrap .macIcon {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #666;
+  text-align: center;
+  line-height: 40px;
+  margin-right: 5px;
+}
+
+.addmacWrap .macInput {
+  display: inline-block;
+  width: 230px;
+  margin-left: 10px;
+}
+
+.addmacModal .boundBtn {
+  width: 60%;
+  height: 40px;
+  margin: 0 auto 20px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 17px;
+  background: rgb(255, 222, 0);
+  border-radius: 10px;
+  cursor: pointer;
+}
 
 
 /* ModalBox end */
