--- a/edu0704/css/vueedu.css
+++ b/edu0704/css/vueedu.css
@@ -336,8 +336,40 @@
   background-size: 100% 100%;
 }
 
+.registerWrap .propertyWrap {
+  width: 100%;
+  height: auto;
+  margin-top: 25px;
+  font-size: 14px;
+  display: flex;
+  display: -webkit-flex;
+  align-content: space-around;
+  justify-content: space-around;
+}
+
+.registerWrap .prolist {
+  flex: 1;
+  padding: 8px;
+  text-align: center;
+  box-sizing: border-box;
+  background: #e6e6e6;
+  cursor: pointer;
+}
+
+.registerWrap .prolist:hover {
+  background: rgb(255, 222, 0);
+}
+
+.registerWrap .curPro {
+  background: rgb(255, 222, 0);
+}
+
 .stuInfoWrap {
   width: 600px;
+}
+
+.stuInfoWrap .errInfo {
+  margin-top: 20px;
 }
 
 .vmpart {
@@ -454,6 +486,7 @@
 .userenter .next {
   width: 320px;
   height: 40px;
+  font-size: 16px;
   position: absolute;
   bottom: 20px;
   text-align: center;
@@ -461,6 +494,10 @@
   background: rgb(255, 222, 0);
   border-radius: 10px;
   cursor: pointer;
+}
+
+.userenter .disabled {
+  background: rgb(184, 184, 184);
 }
 
 .userenter .info {
